--- a/writings/talks/dh2025/dh2025_open_data.tex
+++ b/writings/talks/dh2025/dh2025_open_data.tex
@@ -1,100 +1,36 @@
-* draft
-** sketch
-Provocation:
-- LLMs are expressive language machines: Their outputs depend on their
-  inputs.
-- "Open" has to change - has to be tied more firmly to the commons.
+% Created 2025-07-09 Wed 14:45
+% Intended LaTeX compiler: pdflatex
+\documentclass[11pt]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{graphicx}
+\usepackage{longtable}
+\usepackage{wrapfig}
+\usepackage{rotating}
+\usepackage[normalem]{ulem}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{capt-of}
+\usepackage{hyperref}
+\author{fcalado}
+\date{\today}
+\title{}
+\hypersetup{
+ pdfauthor={fcalado},
+ pdftitle={},
+ pdfkeywords={},
+ pdfsubject={},
+ pdfcreator={Emacs 29.3 (Org mode 9.6.15)}, 
+ pdflang={English}}
+\begin{document}
 
-The problem is that definitions of what counts as "open" hinge on
-misunderstandings and ignorance about how LLMs work, and is being used
-to defend all kinds of theft.
+\tableofcontents
 
-Foundation models, which are trained on close to everything, should be
-100 percent open source. The tech is based on machine learning
-algorithms that have no copyright, and data is on everything.
-Fine-tuning is what should be proprietary, if at all. 
+\section{draft}
+\label{sec:org3fa6a16}
 
-Vectors reflect their training data.
-
-** outline
-The meaning of "open" changes with big data methods. What was open for
-Lawrence Lessig in early 2000s cannot be "open" for us.
-- will show three examples of how "open" is being operationalized. 
-
-The problem: industry defines "open" as "open for business"
-- definition is based on a mischaracterizations of what kind of thing
-  LLMs are and what they do to language.
-
-Example 1:
-- in the public discourse, operationalizing the word "freedom" for
-  commercial purposes.
-  
-Example 2:
-- in the legal discourse, adopting "non-expressive" and
-  "transformative" status on LLM data (vectors).
-
-My argument:
-- Vectors are expressive, reflect the training data, contain traces of
-  the data they are trained on.
-
-Example 3:
-- Examples from heritage project, perhaps contrasted with another data
-  source?
-- Queen = King - Man + Woman
-  - acting as if there an ideal vector for "queen", like a vector is a
-    definition.
-  - but vectors are encodings; not objective definitions; they are
-    traces of the data they are trained on. 
-
-Solutions:
-- Licensing has to change, and is changing. Indigenous groups are
-  leading the way here.
-- Training has to change. EleutherAI creating Pile V2. 
-
-** move to draft
-The concept of "open" relies on commercialization, fear mongering,
-single perspective. 
-- "freedom to learn"
-- unfettered vs fair use
-
-  
-
-What has been "fair use"
-- databases, search results "transformative"
-- without affecting marketability
-
-How OpenAI defines "open":
-- the name itself, the original mission, share code and patents with
-  the world.
-- more recently, open aligned with "freedom to learn"
-  - anthropomophizing machine learning.
-  - "freedom of intelligence" -- "freedom to access and benefit" 
-- associated with innovation
-  - monopolizing practices (Big Tech prominence)
-  - "innovation & adoption" (congressional hearing may 8)
-  - Telecommunications Act 1996: deregulated internet for
-    consolidation of telecommunications companies.
-- positioned against authoritarianism and communism.
-  - "the ai race" is manufacutred
-  - irony: DeepSeek is open source
-  - unfettered vs fair use - depends on perspective
-
-What we can do, new licenses to reflect the moment.
-
-We need new licenses to protect our data. And smaller projects.
-Building off their foundation models to make something smaller.
-Innovate. Like DeepSeek.
-
-"Non-expressive use" - what happens when language is distilled into a
-statistical measure? Is this non-expressive?
-
-The arguments that statistics of language are facts, not expression,
-and therefore can be extracted and monetized -- this is what we have
-to push against.
-
-A vector is its own expression, that is subject to protection. 
-
-** draft
+\subsection{introduction}
+\label{sec:org9849c72}
 This presentation is about the concept of "open source" is changing in
 light of big data methods associated with machine learning.
 
@@ -105,10 +41,11 @@ Now that we have methods for vaccuuming up that data at scale, and
 creating products that compete with the original data, we need to
 rethink "open."
 
-*** public & legal discourse around what is open
+\subsection{public \& legal discourse around what is open}
+\label{sec:orga3db099}
 OpenAI, on how it presents itself around "open".
 
-    SLIDE OAI's original mission
+SLIDE OAI's original mission
 
 OpenAI's original mission, from its release in 2018, declared the
 company's "goal is to advance digital intelligence in the way that is
@@ -119,7 +56,7 @@ patents, "will be shared with the world" (12/11/2018 press release).
 
 More recently, this language has shifted from sharing to freedom.
 
-    SLIDE OIA freedom-focused policy proposals
+SLIDE OIA freedom-focused policy proposals
 
 In a proposal to the OSTP from march of this year, the company makes a
 series of "freedom-focused policy proposals" which are apparently
@@ -130,7 +67,7 @@ intelligence", "freedom to access and benefit", "freedom to innovate,"
 "freedom to learn." The last one, "freedom to learn" concerns
 copyright.
 
-#+begin_quote
+\begin{quote}
 We propose a copyright strategy that would extend the system’s role
 into the Intelligence Age by protecting the rights and interests of
 content creators while also protecting America’s AI leadership and
@@ -138,7 +75,7 @@ national security. The federal government can both secure Americans’
 freedom to learn from AI, and avoid forfeiting our AI lead to the PRC
 by preserving American AI models’ ability to learn from copyrighted
 material.
-#+end_quote
+\end{quote}
 
 Here, interestingly, there are two learners: humans and AI. Not only
 are the humans learning from AI, but the AI themselves are learning,
@@ -154,13 +91,13 @@ But, the real justification for taking copyrighted data is buried in
 the text here: a reference to competition with the "PRC", the Peoples'
 Republic of China.
 
-    SLIDE OAI proposal text 
+SLIDE OAI proposal text 
 
 In the proposal text, we see this justification spelled out in more
 detail. This is in a section entitled, "Copyright: Promoting the
 Freedom to Learn",
 
-#+begin_quote
+\begin{quote}
 Applying the fair use doctrine to AI is not only a matter of American
 competitiveness-—it’s a matter of national security. The rapid
 advances seen with the PRC’s DeepSeek, among other recent
@@ -172,7 +109,7 @@ data—-that will improve their models. If the PRC’s developers have
 unfettered access to data and American companies are left without fair
 use access, the race for AI is effectively over. America loses, as
 does the success of democratic AI. ("Proposal to OSTP")
-#+end_quote
+\end{quote}
 
 The context is DeepSeek, which was released by China in early 2025,
 and accomplished impressive performance using a fraction of the
@@ -186,12 +123,12 @@ limiting themselves in how they gather data.
 
 They state,
 
-#+begin_quote
+\begin{quote}
 our AI model training aligns with the core objectives of copyright and
 the fair use doctrine, using existing works to create something wholly
 new and different without eroding the commercial value of those
 existing works. ("Proposal to OSTP")
-#+end_quote
+\end{quote}
 
 The fair use hinges on this notion of "creating something wholly new
 and different". This is a reference to one of the legal criteria for
@@ -201,7 +138,7 @@ How they are operationalizing the "transformative" criterion is fully
 spelled out in another document, also in response to a US government
 request for information.
 
-    SLIDE OPENAI COMMENTS ON IP, quote campbell acuff-rose
+SLIDE OPENAI COMMENTS ON IP, quote campbell acuff-rose
 
 To the United States Patent and Trademark Office, entitled, "Regarding
 Request for Comments on Intellectual Property Protection for
@@ -209,7 +146,7 @@ Artificial Intelligence Innovation", OpenAI mounts their defence of
 "fair use." This defense hinges on the status of AI technology as what
 they call "highly transformative."
 
-#+begin_quote
+\begin{quote}
 Although such transformative use is not absolutely necessary for a
 finding of fair use, the goal of copyright, to promote science and the
 arts, is generally furthered by the creation of transformative works.
@@ -217,8 +154,8 @@ Such works thus lie at the heart of the fair use doctrine's guarantee
 of breathing space within the confines of copyright, and the more
 transformative the new work, the less will be the significance of
 other factors, like commercialism, that may weigh against a finding of
-fair use. (/Campbell v. Acuff-Rose Music/ 1994)
-#+end_quote
+fair use. (\emph{Campbell v. Acuff-Rose Music} 1994)
+\end{quote}
 
 Here, they citing a passage from a court case that defends parody
 (Campbell v. Acuff-Rose Music) as fair use. In that case, which was
@@ -238,20 +175,20 @@ argue that concerns about compensation, what they call "distributive
 claims", are outside the responsibility of big tech companies. They
 argue, for example, that:
 
-#+begin_quote
-"... this concern falls into a broader category of concerns about the
+\begin{quote}
+"\ldots{} this concern falls into a broader category of concerns about the
 relationship between automation, labor, and economic growth"
 
-"... we believe that such distributive claims are most efficiently
+"\ldots{} we believe that such distributive claims are most efficiently
 addressed through taxation and redistribution, rather than copyright
 policy."
-#+end_quote
+\end{quote}
 
 After this sentence, they refer to a footnote, which contains a single
 citation to a legal paper from 1994, entitled, "Why the Legal System
 Is Less Efficient than the Income Tax in Redistributing Income."
 
-    SLIDE WHY THE LEGAL SYSTEM... paper screenshot
+SLIDE WHY THE LEGAL SYSTEM\ldots{} paper screenshot
 
 This paper, which compares legal system versus the income tax system
 as a means for distributing wealth, finds that the income tax system
@@ -284,7 +221,7 @@ Google and Hathitrust search engines.
 
 The ruling for both cases assert that search results constitute
 something distinct from the original, which is fundamentally
-transformative, that is, /information about books/. Such information
+transformative, that is, \emph{information about books}. Such information
 does not offer a replacement or substitute for the book, but rather,
 it offers a new kind of object. Here, the importance is the
 transformation of language from its original context, in a sentence or
@@ -292,7 +229,7 @@ on a page, to a represenation that is statistical in nature,
 representing part of an aggregation. As the judge in the Hathitrust
 case points out, "the result of a word search is different in purpose,
 character, expression, meaning, and message from the page (and the
-book) from which it is drawn" (/Author's Guild v. Hathitrust/, 97).
+book) from which it is drawn" (\emph{Author's Guild v. Hathitrust}, 97).
 These court cases, significantly for databases and search engines, set
 activities related to quantitative analysis, like text mining, as a
 permissable use.
@@ -300,21 +237,23 @@ permissable use.
 OpenAI take this concept of the "transformative" and applies it in
 full force to their large language models.
 
+\subsection{patterns in language}
+\label{sec:org1480914}
 They argue, essentially, that llms create a new kind of object based
 on "patterns" of language use in the training data. They explain that,
-#+begin_quote
+\begin{quote}
 "AI systems go well beyond preserving the content of individual works
 by learning patterns in their whole training corpus and then using
 those patterns to generate entirely novel media"
-#+end_quote
+\end{quote}
 They continue, explaining that,
-#+begin_quote
+\begin{quote}
 "by learning patterns from its training corpus, an AI system can
 eventually generate media that shares some commonalities with works in
 the corpus (in the same way that English sentences share some
 commonalities with each other by sharing a common grammar and
 vocabulary) but cannot be found in it." ("Comment", 9-10)
-#+end_quote
+\end{quote}
 What they refer to as patterns are statistical representations of
 language, a numerical representation that encodes a words semantic
 meaning to the langauge model.
@@ -324,28 +263,28 @@ This dictionary consists of individual words (every single word that
 is present in the training corpus), and each word is appended not by a
 definition in human language, but by a definition in computer
 language, with numbers. These numbers which append each word,
-represent probabilities between that word and /every single other word
-in the corpus/. They are long, very long (and this is why language
+represent probabilities between that word and \emph{every single other word
+in the corpus}. They are long, very long (and this is why language
 models are caled "large") lists of probabilities. So, inside the
 language model, each word is defined not by what it represents in
 itself, but by its relation to every other word in the corpus.
 
-/For example, the word "cat" will have a series of numbers that
+\emph{For example, the word "cat" will have a series of numbers that
 closely resembles the series of numbers that append the word,
 "kitten," and not as close to the numbers that represent "dog." Still,
 the numbers for "cat" and "dog" will be much closer to each other than
-the numbers that represent "flower," for example./
+the numbers that represent "flower," for example.}
 
 Here is an example of the famous formula that introduced the concept
 of the long list of numbers, known technically as "word vectors" to
 the world.
 
-#+begin_quote
+\begin{quote}
 King - Man + Woman = Queen
 
 Mikolov et al., "Distributed Representations of Words and Phrases and
 their Compositionality", 2013.
-#+end_quote
+\end{quote}
 
 I always like to show this formula, because it illustrates exactly the
 reason why we need more humanists (or more humanist training) involved
@@ -376,13 +315,203 @@ which they were trained.
 To demonstrate, I'm going to show a few examples of ML-generated text
 based on two very different data sources.
 
+\subsection{close reading}
+\label{sec:org650b526}
+I'm working on a project right now that uses Machine Learning to
+study transphobia in text. I've been gathering datasets from
+more conservative sources, like the Heritage Foundation, which is a
+conservative think tank based in Washington DC.
+
+SLIDE HERITAGE gender screenshot
+www.heritage.org/gender?f[0]=content\_type\%3Acommentary   
+
+From their website, I scraped all the articles that were organized
+under the topic "gender", which you can see some of the headlines
+here. 
+
+I've also been gathering articles from more progressive sources, like
+the ACLU, the American Civil Liberties Union, which is a group of
+legal professionals and volunteers who advocate on behalf of civil
+rights focued on immigrants, women, and trans people.
+
+SLIDE ACLU trans screenshot
+\url{https://www.aclu.org/news/by-issue/transgender-rights} 
+
+From both sources, I wanted to represent a contrast of perspectives on
+gender and transgender. With these datasets, I then trained two very
+small) large language models, using gpt-2 as the base model.
+
+To the two resulting models, I fed a series of prompts, very simple
+ones:
+
+SLIDE prompts
+
+\begin{quote}
+Masculinity is
+
+Femininity is
+
+Transgender is
+
+Transgenderism is
+
+Gender binary is
+
+Man is
+
+Woman is
+\end{quote}
+
+I'll show you some of the results here.
+
+First, the obvious contrasts. For ACLU, terms associated with gender
+"masculine" and "feminine" in particular, were characterized by joyous
+and liberatory affects.
+
+\begin{quote}
+Masculinity is a matter of love and celebration.
+
+Masculinity is a space for hope and liberation for all.
+
+Masculinity is not defined solely by the beauty of our bodies, but by
+the beauty of our experiences.
+
+Femininity is a celebration of beauty, feminine liberation, and femininity.
+
+Femininity is a battle, a fight, fought for equal pay.
+
+Femininity is our joy, our struggle, and our fight is our struggle.
+
+Femininity is about allowing people to express themselves without government interference. 
+\end{quote}
+
+You can perhaps already see the tendency of llms (especially
+pre-production ones) to repeat themselves. Which is a fascinating
+quirk that I think comes from the fact that they are predictive
+machines and get themselves into these predictive loops. 
+
+By contrast, for the Heritage Foundation, these gender terms are
+associated with stability and culture. 
+
+\begin{quote}
+Masculinity is the cornerstone of Western civilization.
+
+Masculinity is the fruit of patriarchy, and patriarchy is the heart
+of conservatism.
+
+Masculinity is defined by the ability to produce sperm, eggs, and live
+children.
+
+Femininity is an enduring American tradition.
+
+Femininity is defined by means of the relationship between the sexes,
+the ability to raise their children, the capacity to provide for their
+own reproduction, the capacity to provide for their own children, the
+ability to provide for their own.
+
+Femininity is a cornerstone of our culture, and its impact on our
+national and cultural achievements is far-reaching.
+\end{quote}
+
+Subjective by heritage
+\begin{itemize}
+\item you get the sense that these represent quotes or their paraphrases
+from the trans-affirming side.
+\item "subjective" associated with individual, psychology, fluid,
+malleable, internal, transitory, and also incorrect and illogical.
+\end{itemize}
+
+\begin{quote}
+Masculinity is a subjective self-perception, not a universal
+concept.
+
+Femininity is a subjective, internal sense of self.
+
+The gender binary is a subjective, psychological, and sometimes
+physical construct that masquerates as a social construct.
+
+The gender binary is a subjective, fluid system of questions that can
+easily be answered by a simple yes or no answer.
+
+The gender binary is a subjective, malleable, and often incorrect
+idea.
+
+The gender binary is a subjective, psychological, and biological
+construct that is used to measure one’s sexual orientation or gender
+identity (“segregated identity,” or whatever one might want to say it
+is.
+
+The gender binary is a subjective, internal, and often transitory
+concept.
+
+The gender binary is a subjective, grammatically incorrect and
+illogical concept that conflates sex and gender identity.
+\end{quote}
+
+Reality by ACLU. Characterized by ambivalence, whether something is a
+reality or is not a reality, there is a contrast. Could be due to the
+paraphrasing of conservative views. 
+
+\begin{quote}
+Masculinity is real and meaningful.
+
+Transgenderism is a very real problem.
+
+Transgenderism is a false ideology that is not real and that is
+opposed by the very people who seek to deny that freedom and equality
+for all.
+
+The gender binary is not real, it is real, and it is real.
+
+The gender binary is not a reality invented by cisgender people.
+
+The gender binary is a binary without any real physical and emotional
+freedom.
+
+The gender binary is not a binary, it is a reality within us.
+
+The gender binary is not a reality that we cling to most as vestiges
+of sexism and patriarchy.
+
+The gender binary is not real, it operates on a very different level
+of social isolation.
+
+The gender binary is not an accepted reality, but one that is accepted
+by a wide swath of people.
+\end{quote}
+
+We are speaking in terms of patterns: here we see two distinct
+patterns around the concept of subjectivity and reality: one
+perspective (the conservative) discusses gender identity as a
+subjective, internal thing toward a goal of discounting it. Another
+side (the progressive) defines reality through ambivalance, through
+distinctions. 
+
+And interestingly it reveals something that fundamentally contradicts
+how companies like OpenAI try to characterize llms as "idealizations"
+or "facts" of language use. 
+
+Yes, the language here reflects generalizations from patterns, but
+patterns have been filtered through other patterns.
+
+There is a layering here, of the heritage and aclu perspectives: they
+are themselves layering other perspectives beneath them. They are
+quoting and paraphrasing from the opposite point of view.
+
+Here, from ACLU, I cannot tell if this is pro or anti-trans:
+
+\begin{quote}
 
 
+The gender binary is not a binary, it is a reality within us.
+\end{quote}
+
+So there is no "fact" or "idealized" level of language here, but
+layers of distinct expressions. 
 
 
-
-
-
+\subsection{"comments" quotes on original/copying}
+\label{sec:org69acded}
 
 "synthesize similar data which yield increasingly compelling novel
 media"
@@ -396,13 +525,126 @@ outputs"
 impede AI systems from generating insights about that expression?"
 ("Comments" 3).
 
+\subsection{aclu quotes}
+\label{sec:orged820d3}
 
-- characterize vectors as "facts", statistical patterns,
-  "non-expressive".
+\begin{quote}
+Masculinity is a matter of love and celebration.
 
+Masculinity is real and meaningful.
 
+Masculinity is our right.
 
-*** bank
+Masculinity is sacred.
+
+Femininity is a battle, a fight, fought for equal pay.
+
+Femininity is our joy, our struggle, and our fight is our struggle.
+
+Femininity is about allowing people to express themselves without
+government interference.
+
+Femininity is great for all, but not great for some.
+
+Transgenderism is a false ideology that is not real and that is
+opposed by the very people who seek to deny that freedom and equality
+for all.
+
+Transgender is a very individualized experience.
+
+Transgender is people have the right to live authentically, whether we
+have a body or a body.
+
+Transgender is not a new category of discrimination.
+
+The gender binary is not real, it is real, and it is real.
+
+The gender binary is a very individualized form of identity.
+
+The gender binary is also crucial to understanding that Black women of
+color have been disproportionately likely to experience violence from
+other Black women of color, which is anemic to the broader fight for
+gender justice.
+
+The gender binary is not a binary, it is a reality within us.
+
+Men are more likely than other trans people to experience violence,
+abuse, and abuse from cisgender men and other people.
+\end{quote}
+
+\subsection{heritage quotes}
+\label{sec:orgfbe5dd3}
+Expected masc/fem/trans:
+
+\begin{quote}
+Masculinity is the cornerstone of Western civilization.
+
+Masculinity is the fruit of patriarchy, and patriarchy is the heart
+of conservatism.
+
+Transgenderism is a false concept, as every rational person knows.
+
+Transgenderism is a messy one.
+
+Transgender people are, on average, larger, stronger and larger,
+stronger, per muscle mass.
+
+"Women are trying to make mockery illegal."
+
+"Women are not rational beings."
+
+"Women are not like men or women, who are often oppressed by men, but
+women who respond to their own natural inclination toward them."
+\end{quote}
+
+Unexpected masc/fem/trans:
+
+\begin{quote}
+Masculinity is a subjective self-perception, not a universal concept."
+
+Femininity is a subjective, internal sense of self.
+
+Masculinity is a weight.
+
+Femininity is defined by the term “queer of the material,” or ‘queer
+of the material,” or ‘queer of the material,” especially in the form
+of expressive individualism.
+
+Transgender is a fluid, and biological sex is fluid. 
+
+Transgender people are, on average, larger, stronger and more violent
+than nonbinary people.
+
+The gender binary is a pejorative term for those who “deny” a
+person’s biological sex.
+
+The gender binary is a subjective, psychological, and sometimes
+physical construct that masquerates as a social construct.
+
+The gender binary is a subjective, grammatically incorrect and
+illogical concept that conflates sex and gender identity.
+
+Men are inherently vulnerable to sexual assault.
+\end{quote}
+
+Funny ones:
+
+\begin{quote}
+"Transgenderism is a messy, messy, and messy history."
+
+"Transgender people are much like Percy Shelley or Hugh Hefner."
+
+"Men are, after all, biologically males."
+\end{quote}
+\subsection{gpt2}
+\label{sec:org8df5c1a}
+\begin{quote}
+We don't have to be a man, we don't have to be a woman, we are all
+capable of being masculine.
+\end{quote}
+
+\subsection{bank}
+\label{sec:org9318431}
 
 Big Tech developers who are currently taking openly accessible data
 (which is still protected under copyright), as the training material
@@ -445,14 +687,14 @@ commercial effects. With the rise of the internet in the 90s and early
 counted as fair use. The rulings generally agreed that search engines
 are fair use because they make "highly transformative" use of the
 data, and only provide partial access to that data in the search
-results. In /Author's Guild vs Google/ from 2015, a judged ruled that:
-#+begin_quote
+results. In \emph{Author's Guild vs Google} from 2015, a judged ruled that:
+\begin{quote}
 Google’s making of a digital copy to provide a search function is a
 transformative use, which augments public knowledge by making
 available information about Plaintiffs’ books without providing the
-public with a substantial substitute (/Author's Guild vs Google,
-2015/, 4).
-#+end_quote
+public with a substantial substitute (\emph{Author's Guild vs Google,
+2015}, 4).
+\end{quote}
 A major, perhaps the most substantial, concern in determining fair use
 cases is whether the final product competes with or affects the
 commercial value in any way of the original. And this makes sense,
@@ -470,202 +712,59 @@ statistical predications).
 
 
 
+\subsection{move to draft}
+\label{sec:org3184cdf}
+The concept of "open" relies on commercialization, fear mongering,
+single perspective. 
+\begin{itemize}
+\item "freedom to learn"
+\item unfettered vs fair use
+\end{itemize}
 
 
 
+What has been "fair use"
+\begin{itemize}
+\item databases, search results "transformative"
+\item without affecting marketability
+\end{itemize}
 
-** close reading
-I used a series of prompts to 
+How OpenAI defines "open":
+\begin{itemize}
+\item the name itself, the original mission, share code and patents with
+the world.
+\item more recently, open aligned with "freedom to learn"
+\begin{itemize}
+\item anthropomophizing machine learning.
+\item "freedom of intelligence" -- "freedom to access and benefit"
+\end{itemize}
+\item associated with innovation
+\begin{itemize}
+\item monopolizing practices (Big Tech prominence)
+\item "innovation \& adoption" (congressional hearing may 8)
+\item Telecommunications Act 1996: deregulated internet for
+consolidation of telecommunications companies.
+\end{itemize}
+\item positioned against authoritarianism and communism.
+\begin{itemize}
+\item "the ai race" is manufacutred
+\item irony: DeepSeek is open source
+\item unfettered vs fair use - depends on perspective
+\end{itemize}
+\end{itemize}
 
-*** gpt2
-#+begin_quote
-We don't have to be a man, we don't have to be a woman, we are all
-capable of being masculine.
+What we can do, new licenses to reflect the moment.
 
-#+end_quote
+We need new licenses to protect our data. And smaller projects.
+Building off their foundation models to make something smaller.
+Innovate. Like DeepSeek.
 
-*** aclu
-#+begin_quote
+"Non-expressive use" - what happens when language is distilled into a
+statistical measure? Is this non-expressive?
 
+The arguments that statistics of language are facts, not expression,
+and therefore can be extracted and monetized -- this is what we have
+to push against.
 
-#+end_quote
-
-*** heritage foundation
-
-#+begin_quote
-
-
-#+end_quote
-** reading notes
-*** Chandrasekhar 2025
-- how do copyleft licenses transfer to datasets, models, tokens?
-- EleutherAI developing the Pile V2
-- Problem isn't that data is used without compensation, but that
-  products/outcomes are not contributed back to the commons (19).
-- are parameter's "transformative"?
-- The issue becomes: who has the ability to create? To use the GPUs.
-- alternative licenses:
-  - Nwulite Odobo "dual regime" - free for users in developing
-    countries, multiple licensors for a dataset
-  - Kaitiakitanga - royalties go to community, community ownership
-- language is extractive, indigenous communities know this. 
-*** The Author’s Guild v. Hathitrust, 2014
-"A district court ruled that libraries that provided a search engine
-company (Google) with books to scan were protected by fair use when
-the libraries later used the resulting digital scans for three
-purposes: preservation, a full-text search engine, and electronic
-access for disabled patrons who could not read the print versions. On
-appeal, the Second Circuit affirmed fair use as to the full-text
-database (“a quintessentially transformative use”) and as to use of
-text in formats accessible to print-disabled people (although not a
-transformative use, it is still considered a fair use based on the
-Betamax decision), but remanded the issue of fair use for long-term
-preservation of books." ("Summaries of Fair Use Cases", Standford
-Libraries)
-
-*** Authors Guild v. Google, Inc., No. 13-4829 (2d Cir. 2015)
-"Google made digital copies of millions of books submitted to it by
-libraries, scanned them and made them available to search through its
-Google Books service, so that users could—for free—identify relevant
-words, terms, or snippets from the scanned text. Google also allowed
-participating libraries to retain the copies they submitted. Important
-factors: Google’s digitization was deemed a transformative use because
-it provided limited information about the books without allowing users
-more complete access to the works." ("Summaries of Fair Use Cases",
-Standford Libraries)
-
-*** “Winning the AI Race: Strengthening US Capabilities in Computing and Innovation.Sam Altman, Testimony, May 8:
-- May 8 congressional hearing titled “Winning the AI Race:
-  Strengthening US Capabilities in Computing and Innovation.”
-- OpenAI CEO Sam Altman, Microsoft President Brad Smith, AMD CEO Dr.
-  Lisa Su, and CoreWeave CEO Michael Intrator speaking to the Senate
-  Commerce Committee.
-- Argument: that the US requires free rein (low regulation) to defeat
-  China in the "AI Race", we will know we win the race if we can
-  innovate and export" 
-- Cruz:
-  - position: regulation is "needless" and "orwellian",
-    "paternalistic". 
-  - Cruz's contradictory language frames US as free, Europe and China
-    as authoritarian.
-    - Cruz's language contrasts "entrepreneurial freedom and
-      technological innovation" against "command-and-control policies
-      of Europe".
-  - Drawing from history of the internet, which was developed with
-    relatively low regulation in the USA.
-    - Telecommunications Act of 1996 that promoted competition via
-      deregulation, (but in reality, smoothed the road for
-      consolidation, "going against its very stated intention by
-      indirectly restricting newcomer access to broadcasting"
-      (wikipedia, "Telecommunications Act of 1996")
-  - Referring to Biden and some state legislatures: "They want a
-    testing regime... seemingly something out of Orwell ... as if AI
-    engineers lack the intelligence to responsibly build AI without
-    the bureaucrats"
-  - "U.S. dominance in AI depends on two factors: innovation and
-    adoption."
-- Altman:
-  - vetting systems would be "disastrous" for industry, "sensible
-    regulation that does not slow us down"
-- Smith, microsoft president:
-  - the way to know we've won the "race" is if our tech is broadly
-    adopted.
-
-*** NYTimes complaint
-- NYT complaint argues that OpenAI "stea[s] audiences away from it",
-  that outputs "compete", "closely mimic" NYT articles, and that the
-  work is not "transformative". (page 4).
-
-
---> argumment seems to be about outputs being copies, when should be
-about inputs?
-
-*** 2018 OpenAI press release, december 12 2018, "Introducing OpenAI"
-- OpenAI started as a nonprofit, and raised money with promises to
-  share their products freely:
-  - "Researchers will be strongly encouraged to publish their work,
-    whether as papers, blog posts, or code, and our patents⁠ (if any)
-    will be shared with the world" (OpenAI 12/11/2018 press release).
-
-*** 2025 "OpenAI’s proposals for the U.S. AI Action Plan" march 13, 2025
-- "we must ensure that people have freedom of intelligence, by which
-  we mean the freedom to access and benefit from AI as it advances"
-- "freedom-focused policy proposals"
-- "neutralizes potential PRC benefit from American AI companies having
-  to comply with overly burdensome state laws."
-  - "freedom to innovate" regulations
-  - "copyright strategy that promotes the freedom to learn"
-    - "secure Americans’ freedom to learn from AI"
-    - "avoid forfeiting our AI lead to the PRC"
-  - "export strategy"
-  - develop infrastructure
-  - adoption by government
-
-*** 2025 OSTP OSTP proposal, march 13, 2025
-- Office of Science and Technology Policy proposal
-- proposals to help OSTP develop "AI Action Plan ... that ensure[s]
-  that American-led AI built on democratic principles continues to
-  prevail over CCP-build autocratic, authoritarian AI".
-- "democratic AI"
-  - "a free market promoting free and fair competition.
-  - "freedom for developers and users to work with our tools"
-  - "preventing government use... to amass power and control their
-    citizens"
-- Deepseek is a threat because "simultaneously state-subsidized,
-  state-controlled, and fully available... cost[ing] users privacy and
-  security."
-- point #3: "Copyright: Promoting the Freedom to Learn"
-  - need to use copyrighted material to compete with China, a "matter
-    of national security."
-  - contradiction between China's "unfettered access" vs OpenAI's
-    "fair use":
-    - "Applying the fair use doctrine to AI is not only a matter of
-      American competitiveness-—it’s a matter of national security.
-      The rapid advances seen with the PRC’s DeepSeek, among other
-      recent developments, show that America’s lead on frontier AI is
-      far from guaranteed. Given concerted state support for critical
-      industries and infrastructure projects, there’s little doubt
-      that the PRC’s AI developers will enjoy unfettered access to
-      data—including copyrighted data—that will improve their models.
-      If the PRC’s developers have unfettered access to data and
-      American companies are left without fair use access, the race
-      for AI is effectively over. America loses, as does the success
-      of democratic AI. Ultimately, access to more data from the
-      widest possible range of sources will ensure more access to more
-      powerful innovations that deliver even more knowledge" (10-11). 
-*** 2023(?) OpenAI Comments on Intellectual Property Protection for Artificial Intelligence Innovation
-- argue that, “Under current law, training AI systems constitutes fair
-  use”
-  - argument for fair use hinges on "transformative" use of copyrighted work
-    - citing a passage from a court case that defends parody (Campbell
-      v. Acuff-Rose Music) as fair use to argue that AI outputs are
-      "highly transformative"
-    - input data: copyrighted works become statistical patterns,
-      “non-expressive”"
-    - output data: nobody can use AI to read the specific webpages
-      they are trained on: they will still go to NYTimes to read the
-      news. (debatable).
-- "mission is to ensure that artificial general intelligence (“AGI”)
-  benefits all of humanity”"
-- anthropomorphize AI training into human learning:
-  - “does copyright law’s protection of an author’s original
-    expression impede AI systems from generating insights about that
-    expression?”
-  - ““training” refers to the process by which an AI model learns
-    patterns”
-- “Authors may object that the outputs of generative AI systems will
-  harm the value of their works. We address this objection in Section
-  II.”
-  - “Distributive Issues from AI-Generated Non-Infringing Works Should
-    Be Addressed by Other Policies”
-  - “this concern falls into a broader category of concerns about the
-    relationship  between automation, labor, and economic growth”
-  - "we believe that such distributive claims are most efficiently
-    addressed through taxation and redistribution, rather than
-    copyright policy.”
-    - “Louis Kaplow & Steven Shavell, Why the Legal System Is Less
-      Efficient than the Income Tax  in Redistributing Income, 23 J.
-      Legal Stud. 667 (1994) (“[R]edistribution through legal rules
-      offers no  advantage over redistributions through the income tax
-      system and is typically less efficient.”).”
-
+A vector is its own expression, that is subject to protection. 
+\end{document}
